correcting the config file to add the model

--- a/config/params.yaml
+++ b/config/params.yaml
@@ -5,4 +5,6 @@ corrosion_recognition_node:
     publishers:
       debug_image: 'debug_image'
       recognition_topic: 'corrosion_recognition'
-      
+    network: 
+      model: 'yolov8' #yolov8 OR unet2 
+      weight_path: 'yolov8n.pt' #with the weight name also ex: ../weights/****.pt
